--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     ],
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.12.1",
+        "@hookform/resolvers": "^1.0.1",
         "axios": "^0.19.2",
         "chart.js": "2.9.3",
         "classnames": "2.2.6",
+        "cpf-cnpj-validator": "^1.0.3",
         "date-fns": "^2.16.1",
         "moment": "2.24.0",
         "node-sass": "4.13.1",
@@ -49,7 +51,8 @@
         "react-scripts": "^3.4.1",
         "react-toastify": "^6.0.8",
         "reactstrap": "8.4.1",
-        "swr": "^0.3.6"
+        "swr": "^0.3.6",
+        "yup": "^0.31.0"
     },
     "devDependencies": {
         "@types/googlemaps": "3.39.2",
