Variaveis de Ambiente

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "private": true,
     "scripts": {
         "start": "react-scripts start",
-        "build": "react-scripts build",
+        "start-dev": "react-scripts start .env.development.local",
+        "build": "react-scripts build .env.production .env.development.local .env",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
