--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     },
     "private": true,
     "scripts": {
-        "start": "react-scripts start",
+        "start": "react-scripts start .env",
         "start-dev": "react-scripts start .env.development.local",
         "build": "react-scripts build",
         "test": "react-scripts test",
@@ -30,8 +30,12 @@
     ],
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.12.1",
+        "@fortawesome/fontawesome-svg-core": "^1.2.32",
+        "@fortawesome/free-solid-svg-icons": "^5.15.1",
+        "@fortawesome/react-fontawesome": "^0.1.13",
         "@hookform/resolvers": "^1.0.1",
         "axios": "^0.19.2",
+        "bancos-brasileiros": "^1.3.33",
         "chart.js": "2.9.3",
         "classnames": "2.2.6",
         "cpf-cnpj-validator": "^1.0.3",
