--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "react-dom": "16.12.0",
         "react-google-maps": "9.4.5",
         "react-hook-form": "^6.9.5",
+        "react-lottie": "^1.2.3",
         "react-router-dom": "5.1.2",
         "react-scripts": "^3.4.1",
         "react-toastify": "^6.0.8",
