--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "@fortawesome/fontawesome-svg-core": "^1.2.32",
         "@fortawesome/free-solid-svg-icons": "^5.15.1",
         "@fortawesome/react-fontawesome": "^0.1.13",
-        "@hookform/resolvers": "^1.0.1",
+        "@hookform/resolvers": "^1.2.0",
         "axios": "^0.19.2",
         "bancos-brasileiros": "^1.3.33",
         "chart.js": "2.9.3",
@@ -41,7 +41,7 @@
         "cpf-cnpj-validator": "^1.0.3",
         "date-fns": "^2.16.1",
         "moment": "2.24.0",
-        "node-sass": "4.13.1",
+        "node-sass": "5.0.0",
         "nouislider": "14.1.1",
         "prop-types": "^15.7.2",
         "react": "16.12.0",
@@ -51,14 +51,14 @@
         "react-datetime": "2.16.3",
         "react-dom": "16.12.0",
         "react-google-maps": "9.4.5",
-        "react-hook-form": "^6.9.5",
+        "react-hook-form": "^6.13.1",
         "react-lottie": "^1.2.3",
         "react-router-dom": "5.1.2",
-        "react-scripts": "^3.4.1",
-        "react-toastify": "^6.0.8",
+        "react-scripts": "4.0.1",
+        "react-toastify": "^6.2.0",
         "reactstrap": "8.4.1",
-        "swr": "^0.3.6",
-        "yup": "^0.31.0"
+        "swr": "^0.3.9",
+        "yup": "^0.31.1"
     },
     "devDependencies": {
         "@types/googlemaps": "3.39.2",
