--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
         "cpf-cnpj-validator": "^1.0.3",
         "date-fns": "^2.16.1",
         "moment": "2.24.0",
-        "node-sass": "5.0.0",
+        "node-sass": "^4.14.1",
         "nouislider": "14.1.1",
         "prop-types": "^15.7.2",
         "react": "16.12.0",
