--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
         "jest-circus": "26.6.0",
         "jest-resolve": "26.6.0",
         "jest-watch-typeahead": "0.6.1",
+        "jwt-decode": "^3.1.2",
         "mini-css-extract-plugin": "0.11.3",
         "moment": "2.24.0",
         "node-sass": "^4.14.1",
