--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
         "jwt-decode": "^3.1.2",
         "mini-css-extract-plugin": "0.11.3",
         "moment": "2.24.0",
+        "moment-timezone": "^0.5.32",
         "node-sass": "^4.14.1",
         "nouislider": "14.1.1",
         "optimize-css-assets-webpack-plugin": "5.0.4",
