--- a/package.json
+++ b/package.json
@@ -38,12 +38,7 @@
         "@svgr/webpack": "5.4.0",
         "@typescript-eslint/eslint-plugin": "^4.5.0",
         "@typescript-eslint/parser": "^4.5.0",
-        "axios": "^0.19.2",
-        "babel-eslint": "^10.1.0",
-        "babel-jest": "^26.6.0",
-        "babel-loader": "8.1.0",
-        "babel-plugin-named-asset-import": "^0.3.7",
-        "babel-preset-react-app": "^10.0.0",
+        "axios": "^0.21.1",
         "bancos-brasileiros": "^1.3.33",
         "bfj": "^7.0.2",
         "camelcase": "^6.1.0",
@@ -55,37 +50,14 @@
         "date-fns": "^2.16.1",
         "dotenv": "8.2.0",
         "dotenv-expand": "5.1.0",
-        "eslint": "^7.11.0",
-        "eslint-config-react-app": "^6.0.0",
-        "eslint-plugin-flowtype": "^5.2.0",
-        "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-jest": "^24.1.0",
-        "eslint-plugin-jsx-a11y": "^6.3.1",
-        "eslint-plugin-react": "^7.21.5",
-        "eslint-plugin-react-hooks": "^4.2.0",
-        "eslint-plugin-testing-library": "^3.9.2",
-        "eslint-webpack-plugin": "^2.1.0",
         "file-loader": "6.1.1",
         "fs-extra": "^9.0.1",
         "html-webpack-plugin": "4.5.0",
         "identity-obj-proxy": "3.0.0",
-        "jest": "26.6.0",
-        "jest-circus": "26.6.0",
-        "jest-resolve": "26.6.0",
-        "jest-watch-typeahead": "0.6.1",
-        "jwt-decode": "^3.1.2",
-        "mini-css-extract-plugin": "0.11.3",
         "moment": "2.24.0",
         "moment-timezone": "^0.5.32",
         "node-sass": "^4.14.1",
         "nouislider": "14.1.1",
-        "optimize-css-assets-webpack-plugin": "5.0.4",
-        "pnp-webpack-plugin": "1.6.4",
-        "postcss-flexbugs-fixes": "4.2.1",
-        "postcss-loader": "3.0.0",
-        "postcss-normalize": "8.0.1",
-        "postcss-preset-env": "6.7.0",
-        "postcss-safe-parser": "5.0.2",
         "prompts": "2.4.0",
         "prop-types": "^15.7.2",
         "react": "16.12.0",
@@ -108,23 +80,50 @@
         "semver": "7.3.2",
         "style-loader": "1.3.0",
         "swr": "^0.3.9",
-        "terser-webpack-plugin": "4.2.3",
-        "ts-pnp": "1.2.0",
-        "url-loader": "4.1.1",
-        "webpack": "4.44.2",
-        "webpack-dev-server": "3.11.0",
-        "webpack-manifest-plugin": "2.2.0",
-        "workbox-webpack-plugin": "5.1.4",
         "yup": "^0.31.1"
     },
     "devDependencies": {
         "@types/googlemaps": "3.39.2",
         "@types/markerclustererplus": "2.1.33",
         "@types/react": "16.9.19",
-        "eslint-plugin-flowtype": "3.13.0",
+        "babel-eslint": "^10.1.0",
+        "babel-jest": "^26.6.0",
+        "babel-loader": "8.1.0",
+        "babel-plugin-named-asset-import": "^0.3.7",
+        "babel-preset-react-app": "^10.0.0",
+        "eslint": "^7.11.0",
+        "eslint-config-react-app": "^6.0.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jest": "^24.1.0",
+        "eslint-plugin-jsx-a11y": "^6.3.1",
+        "eslint-plugin-react": "^7.21.5",
+        "eslint-plugin-react-hooks": "^4.2.0",
+        "eslint-plugin-testing-library": "^3.9.2",
+        "eslint-webpack-plugin": "^2.1.0",
+        "eslint-plugin-flowtype": "4.6.0",
         "gulp": "4.0.2",
         "gulp-append-prepend": "1.0.8",
-        "typescript": "3.7.5"
+        "jest": "26.6.0",
+        "jest-circus": "26.6.0",
+        "jest-resolve": "26.6.0",
+        "jest-watch-typeahead": "0.6.1",
+        "jwt-decode": "^3.1.2",
+        "mini-css-extract-plugin": "0.11.3",
+        "optimize-css-assets-webpack-plugin": "5.0.4",
+        "pnp-webpack-plugin": "1.6.4",
+        "postcss-flexbugs-fixes": "4.2.1",
+        "postcss-loader": "3.0.0",
+        "postcss-normalize": "8.0.1",
+        "postcss-preset-env": "6.7.0",
+        "postcss-safe-parser": "5.0.2",
+        "typescript": "3.7.5",
+        "terser-webpack-plugin": "4.2.3",
+        "ts-pnp": "1.2.0",
+        "url-loader": "4.1.1",
+        "webpack": "4.44.2",
+        "webpack-dev-server": "3.11.0",
+        "webpack-manifest-plugin": "2.2.0",
+        "workbox-webpack-plugin": "5.1.4"
     },
     "jest": {
         "roots": [
