--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
         "@fortawesome/free-solid-svg-icons": "^5.15.1",
         "@fortawesome/react-fontawesome": "^0.1.13",
         "@hookform/resolvers": "^1.2.0",
+        "@material-ui/core": "^4.11.3",
+        "@material-ui/icons": "^4.11.2",
         "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
         "@svgr/webpack": "5.4.0",
         "@typescript-eslint/eslint-plugin": "^4.5.0",
@@ -51,11 +53,13 @@
         "dotenv": "8.2.0",
         "dotenv-expand": "5.1.0",
         "file-loader": "6.1.1",
+        "fontsource-roboto": "^4.0.0",
         "fs-extra": "^9.0.1",
         "html-webpack-plugin": "4.5.0",
         "identity-obj-proxy": "3.0.0",
         "moment": "2.24.0",
         "moment-timezone": "^0.5.32",
+        "mui-datatables": "^3.7.6",
         "node-sass": "^4.14.1",
         "nouislider": "14.1.1",
         "prompts": "2.4.0",
@@ -66,7 +70,7 @@
         "react-chartjs-2": "2.9.0",
         "react-copy-to-clipboard": "5.0.2",
         "react-datetime": "2.16.3",
-        "react-dev-utils": "^11.0.1",
+        "react-dev-utils": "^11.0.3",
         "react-dom": "16.12.0",
         "react-hook-form": "^6.13.1",
         "react-lottie": "^1.2.3",
