--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
         "react-bootstrap-table-next": "^4.0.3",
         "react-chartjs-2": "2.9.0",
         "react-copy-to-clipboard": "5.0.2",
-        "react-datetime": "2.16.3",
+        "react-datetime": "^2.16.3",
+        "react-datetime-range-picker": "^3.0.0",
         "react-dev-utils": "^11.0.3",
         "react-dom": "16.12.0",
         "react-hook-form": "^6.13.1",
