--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
         "react-app-polyfill": "^2.0.0",
         "react-bootstrap-table-next": "^4.0.3",
         "react-chartjs-2": "2.9.0",
+        "react-code-blocks": "0.0.8",
         "react-copy-to-clipboard": "5.0.2",
         "react-datetime": "^2.16.3",
         "react-datetime-range-picker": "^3.0.0",
