--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_PATH=http://localhost:3333
+REACT_APP_API_PATH=https://api.converte.me
 REACT_APP_BUCKET=https://s3.amazonaws.com/cdn.converte.me
